[gd_scene load_steps=8 format=3 uid="uid://dm5yftn60gmxe"]

[ext_resource type="Texture2D" uid="uid://cunu35cyfyvjq" path="res://Assets/Sprites/health.png" id="1_7ewnm"]
[ext_resource type="Theme" uid="uid://ca7biufqtx3kh" path="res://Scenes/UIs/UI_Settings/RedWest.tres" id="1_fxu0l"]
[ext_resource type="Script" path="res://Scenes/UIs/Player_HUD/PlayerHUD.gd" id="2_4bcoa"]
[ext_resource type="Texture2D" uid="uid://cwqq2a8p5khar" path="res://Assets/Sprites/health_empty.png" id="2_pv6ku"]
[ext_resource type="LabelSettings" uid="uid://bdytyd82v3l1q" path="res://Scenes/UIs/UI_Settings/PlayerHUD.tres" id="4_wjv7m"]
[ext_resource type="Texture2D" uid="uid://drh4d6v2665gh" path="res://Assets/Sprites/star-empty-icon.png" id="6_sx5at"]
[ext_resource type="Texture2D" uid="uid://cjebmckot7ysa" path="res://Assets/Sprites/star-full-icon.png" id="7_t3dr5"]

[node name="PlayerHUD" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_fxu0l")
script = ExtResource("2_4bcoa")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 2
offset_left = 56.0
offset_top = 24.0
offset_right = 544.0
offset_bottom = 56.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4
texture_under = ExtResource("1_7ewnm")
texture_over = ExtResource("2_pv6ku")
texture_progress = ExtResource("1_7ewnm")
tint_under = Color(0.14902, 0, 0, 0.968627)
tint_over = Color(0.376471, 0, 0, 1)
tint_progress = Color(0.639216, 0, 0.0941176, 1)

[node name="HPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 57.0
offset_bottom = 68.0
text = "HP
"
label_settings = ExtResource("4_wjv7m")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 520.0
offset_bottom = 554.0
max_value = 3.0
value = 3.0
texture_under = ExtResource("6_sx5at")
texture_over = ExtResource("7_t3dr5")
texture_progress = ExtResource("6_sx5at")
tint_under = Color(0.996078, 0.898039, 0.0784314, 1)
tint_over = Color(0.996078, 0.898039, 0.0784314, 1)
tint_progress = Color(0.996078, 0.898039, 0.0784314, 1)

[node name="DashLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 68.0
offset_right = 89.0
offset_bottom = 120.0
text = "Dash Cooldown:"
label_settings = ExtResource("4_wjv7m")

[node name="DashAmount" type="Label" parent="DashLabel"]
layout_mode = 0
offset_left = 207.0
offset_top = -1.0
offset_right = 247.0
offset_bottom = 51.0
text = "0"
label_settings = ExtResource("4_wjv7m")
horizontal_alignment = 1
vertical_alignment = 1
